Add minimal example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,14 @@
 cmake_minimum_required(VERSION 4.1)
 project(Hermes)
 
+option(WS_BUILD_EXAMPLES "Build examples" ON)
+
 if(POLICY CMP0167)
     cmake_policy(SET CMP0167 NEW)
 endif()
 
 find_package(Boost 1.89 REQUIRED)
+find_package(OpenSSL REQUIRED)
 
 set(LIBRARY_SOURCES
     Implementation/WebSocketMessenger.cpp
@@ -15,7 +18,13 @@ set(LIBRARY_SOURCES
 )
 
 add_library(hermes STATIC ${LIBRARY_SOURCES})
-target_compile_features(hermes PRIVATE cxx_std_20)
+target_compile_features(hermes PUBLIC cxx_std_20)
+
+target_link_libraries(hermes
+    PUBLIC
+        OpenSSL::SSL
+        OpenSSL::Crypto
+)
 
 target_include_directories(hermes PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}
@@ -25,3 +34,7 @@ target_include_directories(hermes PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/Include
     ${Boost_INCLUDE_DIRS}
 )
+
+if (WS_BUILD_EXAMPLES)
+    add_subdirectory(examples)
+endif()
