Add separate sync and async examples

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,8 +1,17 @@
-add_executable(hermes-basic-example
-    hermes_basic_example.cpp
+add_executable(hermes-sync-example
+    hermes_sync_example.cpp
 )
 
-target_link_libraries(hermes-basic-example
+target_link_libraries(hermes-sync-example
+    PRIVATE
+        hermes
+)
+
+add_executable(hermes-async-example
+    hermes_async_example.cpp
+)
+
+target_link_libraries(hermes-async-example
     PRIVATE
         hermes
 )
